--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -29,7 +29,13 @@
 \begin{abstract}
 % Abstract
 \end{abstract}
-% Main Contents of Your Summary
+
+
+\input{sections/introduction}
+
+
+\input{sections/conclusion}
+
 \section{Sections look like this}
 \subsection{And Subsections like this}
 An enumeration
