--- a/summary/summary.bib
+++ b/summary/summary.bib
@@ -1,5 +1,28 @@
 ﻿% This file was created with Citavi 6.8.0.0
 
+@proceedings{.2000,
+ year = {2000},
+ title = {Proceedings / Seventh International Symposium on String Processing and Information Retrieval, SPIRE 2000: September 27 - 29, 2000, A Curu{\~n}a, Spain},
+ address = {Los Alamitos, Calif.},
+ publisher = {{IEEE Computer Society}},
+ isbn = {0-7695-0746-8}
+}
+
+
+@inproceedings{Bergroth.2000,
+ author = {Bergroth, L. and Hakonen, H. and Raita, T.},
+ title = {A survey of longest common subsequence algorithms},
+ pages = {39--48},
+ publisher = {{IEEE Computer Society}},
+ isbn = {0-7695-0746-8},
+ booktitle = {Proceedings / Seventh International Symposium on String Processing and Information Retrieval, SPIRE 2000},
+ year = {2000},
+ address = {Los Alamitos, Calif.},
+ doi = {10.1109/SPIRE.2000.878178},
+ file = {http://ieeexplore.ieee.org/document/878178/}
+}
+
+
 @misc{Bringman.2018,
  abstract = {We revisit the classic combinatorial pattern matching problem of finding a longest common subsequence (LCS). For strings 
 
@@ -86,6 +109,37 @@ and dominant pairs
  url = {http://arxiv.org/pdf/1803.00938},
  doi = {10.1137/1.9781611975031.79},
  file = {Bringman, Künnemann 2018 - Multivariate Fine-Grained Complexity of Longest:C\:\\Users\\Cedrico\\Documents\\Citavi 6\\Projects\\SeminarFGC\\Citavi Attachments\\Bringman, Künnemann 2018 - Multivariate Fine-Grained Complexity of Longest.pdf:pdf}
+}
+
+
+@incollection{Paterson.1994,
+ author = {Paterson, Mike and Dan{\v{c}}{\'i}k, Vlado},
+ title = {Longest common subsequences},
+ pages = {127--142},
+ volume = {841},
+ publisher = {Springer},
+ isbn = {978-3-540-58338-7},
+ series = {Lecture Notes in Computer Science},
+ editor = {Pr{\'i}vara, Igor},
+ booktitle = {Mathematical foundations of computer science 1994},
+ year = {1994},
+ address = {Berlin and Heidelberg and New York and London and Paris and Tokyo and Hong Kong and Barcelona and Budapest},
+ doi = {10.1007/3-540-58338-6{\textunderscore }63},
+ file = {Paterson, Dančík 1994 - Longest common subsequences:C\:\\Users\\Cedrico\\Documents\\Citavi 6\\Projects\\SeminarFGC\\Citavi Attachments\\Paterson, Dančík 1994 - Longest common subsequences.pdf:pdf}
+}
+
+
+@book{Privara.1994,
+ year = {1994},
+ title = {Mathematical foundations of computer science 1994: 19th international symposium ; proceedings},
+ price = {DM 114.00 ((Berlin ...) kart.)},
+ address = {Berlin and Heidelberg and New York and London and Paris and Tokyo and Hong Kong and Barcelona and Budapest},
+ volume = {Vol. 841},
+ publisher = {Springer},
+ isbn = {978-3-540-58338-7},
+ series = {Lecture Notes in Computer Science},
+ editor = {Pr{\'i}vara, Igor},
+ doi = {10.1007/3-540-58338-6}
 }
 
 
