update preamble, add some main content, add commands

--- a/summary/sections/introduction.tex
+++ b/summary/sections/introduction.tex
@@ -1,1 +1,5 @@
 \section{Introduction}
+
+This multivariate analysis of the LCS problem, studied the following parameters.
+The input size $n := \max\{|x|, |y|\}$ of the longer and $m := \min\{|x|, |y|\}$ of the shorter string, the size of the underlying alphabet $|\Sigma|$, the length $L$ of a longest common subsequence
+
