--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -22,7 +22,12 @@
 \author{Cedrico Knoesel}{Karlsruhe Institute of Technology}{cedrico.knoesel@student.kit.edu}{}{}
 
 
+\input{util/preamble_general}
+\input{util/preamble}
+
 \begin{document}
+
+\input{commands}
 
 \maketitle
 
@@ -33,6 +38,7 @@
 
 \input{sections/introduction}
 
+\input{sections/main}
 
 \input{sections/conclusion}
 
