--- a/summary/commands.tex
+++ b/summary/commands.tex
@@ -1,1 +1,6 @@
 \newcommand{\lcs}{LCS}
+\newcommand{\lcsy}[1]{\text{LCS}^\gamma(#1)}
+
+\newcommand{\numSymbols}[2]{\#_{#1}(#2)}
+
+\newcommand{\gLargeLCS}[1]{G(#1)}
