--- a/summary/sections/introduction.tex
+++ b/summary/sections/introduction.tex
@@ -3,3 +3,19 @@
 This multivariate analysis of the LCS problem, studied the following parameters.
 The input size $n := \max\{|x|, |y|\}$ of the longer and $m := \min\{|x|, |y|\}$ of the shorter string, the size of the underlying alphabet $|\Sigma|$, the length $L$ of a longest common subsequence
 
+
+
+Greedy Prefix Matching
+
+
+Lemma 7.6
+
+
+\subsection{Notations}
+Todo: Define notations for:
+
+$\#_\sigma(x)$
+
+
+\subsection{Related Work}
+
