--- a/summary/sections/main.tex
+++ b/summary/sections/main.tex
@@ -17,3 +17,9 @@ Each of the steps will be explained in more detail in the following.
 \input{sections/main_part/1_define_parameters}
 
 \input{sections/main_part/2_parameter_relations}
+
+\input{sections/main_part/3_reductions}
+
+
+
+
