--- a/summary/sections/main_part/1_define_parameters.tex
+++ b/summary/sections/main_part/1_define_parameters.tex
@@ -10,4 +10,4 @@ These are:
 	\item the number of matching pairs $M$ and dominant pairs $d$
 \end{itemize}
 Note, that we always assume $x$ to be the longer string. Otherwise we could just swap $x$ and $y$.\todo{Add Motivation matching pairs and dominant pairs}
-
+We will use the notation $p(x,y)$ for a parameter $p$ to refer to the value of this parameter for the strings $x$ and $y$.
