--- a/summary/sections/main_part/2_parameter_relations.tex
+++ b/summary/sections/main_part/2_parameter_relations.tex
@@ -2,10 +2,39 @@
 The goal of this step is to find valid and non-trivial parameter combinations.
 This is important as we want to restrict the parameter space that must be spanned by the reductions in the next step.
 
-Before finding the actual relations, we first define a so called \emph{parameter setting}.
+Before finding the actual relations, we first define a so called \emph{parameter setting} and its non-triviality.
 
 \begin{definition}[Parameter Setting]
 Let $\mathcal{P}$ be the set of parameters.
 We define $\mathbb{\alpha} = (\alpha_p)_{p \in \mathcal{P}}$ as a \emph{parameter setting}.
-We further define \lc
+We further define $\lcsy{\mathbb{\alpha}}$ as the subset of \lcs{} instances, where the input strings $x$ and $y$ fulfill
+\begin{displaymath}
+	\forall p \in \mathcal{P}: \  \frac{n^{\alpha_p}}{\gamma} \leq p(x,y) \leq \gamma n^{\alpha_p},
+\end{displaymath}
+i.e., the parameters are polynomially bounded by the input size $n$ with $\alpha_p$ as exponent.
+A parameter setting $\mathbb{\alpha}$ is called \emph{trivial}, if $\lcsy{\alpha}$ has finite many instances for all $\gamma \geq 1$.
 \end{definition}
+%
+To give an example, the LCS instances $x=a^{k}b^{k}$ and $y = ba^k$ for $k\geq 1$ are in $\lcsy{\mathbb{\alpha}}$ for all $\gamma \geq 4$, with the parameter setting $\mathbb{\alpha}$ being $\alpha_m = \alpha_L = \alpha_\Delta = 1$, $\alpha_\delta = 0$, $\alpha_M = 2$ and $\alpha_d = 1$.\todo{Example, maybe unnecessary?}
+
+
+The full set of parameter relations is given in Table x\todo{add table with alpha values}.
+Here we can see some trivial bounds, like $\alpha_L \leq \alpha m \leq \alpha_n$, which is due to the trivial relations $L \leq m \leq n$ which are true for every \lcs{} instance.
+All of the relations are proven in the original paper (see \cite[section 6]{Bringman.2018}), but in this summary we will only proof the relations $2\alpha_L - \alpha_\Sigma \leq \alpha_M$.
+Note that therefore it suffices to prove $\frac{L^2}{|\Sigma|} \leq M$.
+
+\begin{theorem}
+For every \lcs{} instance the number of matching pairs is bounded by
+\begin{displaymath}
+	\dfrac{L^2}{|\Sigma|} \leq M .
+\end{displaymath}
+\end{theorem}
+
+\begin{proof}
+Per definition of matching pairs, we have $M = \sum_{\sigma \in \Sigma} \numSymbols{\sigma}{x} \numSymbols{\sigma}{y}$.
+We can lower bound this by replacing $x$ and $y$ with one of their \lcs{} $z$.
+Hence, $M \geq \sum_{\sigma \in \Sigma} \numSymbols{\sigma}{z}^2$.\todo{finish proof}
+\end{proof}
+
+
+
