--- a/summary/commands.tex
+++ b/summary/commands.tex
@@ -2,5 +2,15 @@
 \newcommand{\lcsy}[1]{\text{LCS}^\gamma(#1)}
 
 \newcommand{\numSymbols}[2]{\#_{#1}(#2)}
+\newcommand{\indexSet}[1]{[#1]}
+
+
+\newcommand{\bigO}[1]{\mathcal{O}(#1)}
+\newcommand{\tildeBigO}[1]{\tilde{\mathcal{O}}(#1)}
+
+
+\newcommand{\nvg}[1]{\text{\textsc{Nvg}}(#1)}
+\newcommand{\nvgName}{\textsc{Nvg}}
+
 
 \newcommand{\gLargeLCS}[1]{G(#1)}
