--- a/summary/summary.bib
+++ b/summary/summary.bib
@@ -108,7 +108,32 @@ and dominant pairs
  title = {Multivariate Fine-Grained Complexity of Longest Common Subsequence},
  url = {http://arxiv.org/pdf/1803.00938},
  doi = {10.1137/1.9781611975031.79},
+ file = {https://arxiv.org/pdf/1803.00938.pdf},
  file = {Bringman, Künnemann 2018 - Multivariate Fine-Grained Complexity of Longest:C\:\\Users\\Cedrico\\Documents\\Citavi 6\\Projects\\SeminarFGC\\Citavi Attachments\\Bringman, Künnemann 2018 - Multivariate Fine-Grained Complexity of Longest.pdf:pdf}
+}
+
+
+@inproceedings{Bringmann.2015,
+ author = {Bringmann, Karl and Kunnemann, Marvin},
+ title = {Quadratic Conditional Lower Bounds for String Problems and Dynamic Time Warping},
+ pages = {79--97},
+ publisher = {IEEE},
+ isbn = {978-1-4673-8191-8},
+ booktitle = {2015 IEEE 56th Annual Symposium on Foundations of Computer Science (FOCS 2015)},
+ year = {2015},
+ address = {Piscataway, NJ},
+ doi = {10.1109/FOCS.2015.15},
+ file = {http://ieeexplore.ieee.org/document/7354389/}
+}
+
+
+@proceedings{InstituteofElectricalandElectronicsEngineers.2015,
+ year = {2015},
+ title = {2015 IEEE 56th Annual Symposium on Foundations of Computer Science (FOCS 2015): Berkeley, California, USA, 17 - 20 October 2015},
+ address = {Piscataway, NJ},
+ publisher = {IEEE},
+ isbn = {978-1-4673-8191-8},
+ institution = {{Institute of Electrical and Electronics Engineers} and {IEEE Computer Society} and {Association for Computing Machinery}}
 }
 
 
