--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -20,7 +20,7 @@
 
 \title{Summary: Multivariate Fine-Grained Complexity of Longest Common Subsequence}
 \author{Cedrico Knoesel}{Karlsruhe Institute of Technology}{cedrico.knoesel@student.kit.edu}{}{}
-
+\authorrunning{C. Knoesel}
 
 \input{util/preamble_general}
 \input{util/preamble}
@@ -42,28 +42,5 @@
 
 \input{sections/conclusion}
 
-\section{Sections look like this}
-\subsection{And Subsections like this}
-An enumeration
-\begin{enumerate}
-    \item can be
-    \item done
-    \item like this
-\end{enumerate}
-
-\begin{theorem}
-    Theorems can be easily created by the \texttt{theorem} environment.
-\end{theorem}
-
-\begin{lemma}
-    The same goes for lemmas!
-\end{lemma}
-
-\begin{definition}
-    Definitions are also included.
-\end{definition}
-
-This is an example for a citation\cite{DBLP:conf/focs/HopcroftPV75}.
-\cite[Lemma 1]{Bringman.2018}
 \bibliography{summary}
 \end{document}
