--- a/summary/sections/main_part/reductions/large_lcs/1vs1-2vs1-gadget-tikz.tex
+++ b/summary/sections/main_part/reductions/large_lcs/1vs1-2vs1-gadget-tikz.tex
@@ -12,7 +12,7 @@
 	\lLCSguard{#1_g_1_right}{#1.east}{$1^{\gamma_3}$}{1.5em}{#4}
 	\coordinate (next) at (#1_g_1_right.east);
 }
-\newcommand{\lLCSguardedStringTopLabel}[4]{%
+\newcommand{\lLCSguardedStringTopLabel}[5]{%
 	\lLCSguardedString{#1}{$#2$}{#3}{#4}
 
 	% Define the lower-left and lower-right corners
@@ -22,10 +22,10 @@
     \coordinate (midRight) at (#1_g_1_right.north east);  
 	
 	%\node[draw, inner sep=0, minimum height=14pt, anchor=south west, text width=\labelLength] (#1_label) at (southWest) {$G(#2)$};
-	\path[draw, #4, fill=none] (botLeft) -- (midLeft) -- ++(0,2.2ex) -| (botRight);
+	\path[draw, #5] (botLeft) -- (midLeft) -- ++(0,2.2ex) -| (botRight);
 	\node[part label, anchor=south, #4] (#1_label) at ($(midLeft)!0.5!(midRight)$) {$G(#2)$};
 }
-\newcommand{\lLCSguardedStringBotLabel}[4]{%
+\newcommand{\lLCSguardedStringBotLabel}[5]{%
 	\lLCSguardedString{#1}{$#2$}{#3}{#4}
 
 	% Define the lower-left and lower-right corners
@@ -35,7 +35,7 @@
     \coordinate (midRight) at (#1_g_1_right.south east);  
 	
 	%\node[draw, inner sep=0, minimum height=14pt, anchor=south west, text width=\labelLength] (#1_label) at (southWest) {$G(#2)$};
-	\path[draw, #4, fill=none] (topLeft) -- (midLeft) -- ++(0,-2.2ex) -| (topRight);
+	\path[draw, #5] (topLeft) -- (midLeft) -- ++(0,-2.2ex) -| (topRight);
 	\node[part label, anchor=north, #4] (#1_label) at ($(midLeft)!0.5!(midRight)$) {$G(#2)$};
 }
 
@@ -47,8 +47,8 @@
 	
 	\path[input edge] (#1.north) edge (#2.south);
 	
-	\path[input edge, ultra thick, draw] (#1_g_0.south west) -- (#1_g_0.north west) -- (#2_g_0.south west) -- (#2_g_0.north west);
-	\path[input edge, ultra thick, draw] (#1_g_1_right.south east) -- (#1_g_1_right.north east) -- (#2_g_1_right.south east) -- (#2_g_1_right.north east);
+	\path[unique align, draw] (#1_g_0.south west) -- (#1_g_0.north west) -- (#2_g_0.south west) -- (#2_g_0.north west);
+	\path[unique align, draw] (#1_g_1_right.south east) -- (#1_g_1_right.north east) -- (#2_g_1_right.south east) -- (#2_g_1_right.north east);
 }
 
 \newcommand{\doubleAlignedMatches}[3]{%
@@ -60,6 +60,9 @@
 	
 	\path[guard edge] (#1_g_1_right.north) edge (#3_g_1_right.south);
 	
+	
+	\path[double align, draw] (#1_g_0.south west) -- (#1_g_0.north west) -- (#2_g_0.south west) -- (#2_g_0.north west);
+	\path[double align, draw] (#1_g_1_right.south east) -- (#1_g_1_right.north east) -- (#3_g_1_right.south east) -- (#3_g_1_right.north east);
 }
 
 
@@ -70,7 +73,7 @@
 		\tikzstyle{base} = [minimum width=1.5em, inner sep=1pt, anchor=west]
 		\tikzstyle{text element} = []
 		\tikzstyle{number} = [minimum height=14pt]  
-		\tikzstyle{guard} = [fill=gray]  
+		\tikzstyle{guard} = [fill=lightgray]  
 		\tikzstyle{guard edge} = [color=gray]
 		\tikzstyle{big guard} = [fill=gray!75!black]
 		\tikzstyle{big guard edge} = [color=gray!75!black]
@@ -79,20 +82,22 @@
 		\tikzstyle{cell} = [draw, minimum width=1.5em, fill=white]
 		\tikzstyle{part label} = [font=\tiny]
 		\tikzstyle{hide} = [draw=white!75!black, text=white!75!black]
+		\tikzstyle{unique align} = [color=teal, ultra thick]
+		\tikzstyle{double align} = [color=orange, ultra thick]		
 		
 		\node[base, text element] (eqX) at (0,0) {$=$};
 		\node[base, text element, anchor=east] (x) at (eqX.west) {$x$};
 		
 		\coordinate (base) at ($(eqX.east) + (1,0)$);
-		\lLCSguardedStringTopLabel{x1}{x_1}{1.5em}{}
+		\lLCSguardedStringTopLabel{x1}{x_1}{1.5em}{}{unique align}
+		\coordinate (base) at ($(next) + (0.1,0)$);
+		\lLCSguardedStringTopLabel{x2}{x_2}{1.5em}{}{double align}
 		\coordinate (base) at (next);
-		\lLCSguardedStringTopLabel{x2}{x_2}{1.5em}{}
-		\coordinate (base) at (next);
-		\lLCSguardedStringTopLabel{x3}{x_3}{1.5em}{}
+		\lLCSguardedStringTopLabel{x3}{x_3}{1.5em}{}{double align}
 		\coordinate (base) at (next);
 		\node[base, minimum width=3em] (x_dots) at (base) {$\cdots$};
 		\coordinate (base) at (x_dots.east);
-		\lLCSguardedStringTopLabel{xP}{x_P}{1.5em}{}
+		\lLCSguardedStringTopLabel{xP}{x_P}{1.5em}{}{unique align}
 		
 		%\path[draw] (x1_g_1_right.north east) -- (x1_g_1_right.south east);
 		%\path[draw] (x2_g_1_right.north east) -- (x2_g_1_right.south east);
@@ -104,20 +109,20 @@
 		\node[base, text element, anchor=east] (y) at (eqY.west) {$y$};
 		
 		\coordinate (base) at ($(eqY.east) + (1,0)$);
-		\lLCSguardedStringBotLabel{y1}{y_1}{1.5em}{}
-		\coordinate (base) at (next);
-		\lLCSguardedStringBotLabel{y2}{y_2}{1.5em}{}
+		\lLCSguardedStringBotLabel{y1}{y_1}{1.5em}{}{unique align}
+		\coordinate (base) at ($(next) + (0.1,0)$);
+		\lLCSguardedStringBotLabel{y2}{y_2}{1.5em}{}{double align}
 		\coordinate (base) at (next);
 		\node[base, minimum width=3em] (y_dots) at (base) {$\cdots$};
 		\coordinate (base) at (y_dots.east);
-		\lLCSguardedStringBotLabel{yQ}{y_Q}{1.5em}{}
+		\lLCSguardedStringBotLabel{yQ}{y_Q}{1.5em}{}{unique align}
 		
 		\uniqueAlignedMatches{y1}{x1}
 		\doubleAlignedMatches{y2}{x2}{x3}
 		\uniqueAlignedMatches{yQ}{xP}
 	
 	\end{tikzpicture}
-	\label{fig:1-2vs1gadget}
-	\caption{Todo}
+	\caption{Visualization of the 1vs1/2vs1 gadget. Possible mappings of $y$ to $x$ are visualized. Here $G(y_1)$ is uniquely mapped to $G(x_1)$ and $G(y_2)$ to both $G(x_2)$ and $G(x_3)$. Note that in the first case the \lcs{} only depends on $L(x_1, y_1)$ as the other parts can be fully matched. In the latter case, the full string $G(y_2)$ is a substring of $G(x_2)G(x_3)$ by matching $y_2$ with the $(01)^{\gamma_3}$ part.}
+	\label{fig:12vs1gadget}
 \end{figure}
 
