update small and large lcs

--- a/summary/commands.tex
+++ b/summary/commands.tex
@@ -1,5 +1,8 @@
+\newcommand{\ov}{OV}
 \newcommand{\lcs}{LCS}
 \newcommand{\lcsy}[1]{\text{LCS}^\gamma(#1)}
+
+\newcommand{\uovh}{\texttt{UOVH}}
 
 \newcommand{\numSymbols}[2]{\#_{#1}(#2)}
 \newcommand{\indexSet}[1]{[#1]}
