--- a/summary/sections/main_part/1_define_parameters.tex
+++ b/summary/sections/main_part/1_define_parameters.tex
@@ -1,4 +1,4 @@
-\subsection{Define Parameters}
+\section{Define Parameters}
 To properly scope the multivariate analysis it is necessary to define the parameters of the problem that are being analyzed.
 Here in the case of the \lcs{} problem, the most studied parameters are included in the analysis (see \cite{Bergroth.2000}, \cite{Paterson.1994}). 
 These are:
