--- a/summary/sections/main_part/2_parameter_relations.tex
+++ b/summary/sections/main_part/2_parameter_relations.tex
@@ -1,4 +1,4 @@
-\subsection{Find Parameter Relations}
+\section{Find Parameter Relations}
 The goal of this step is to find valid and non-trivial parameter combinations.
 This is important as we want to restrict the parameter space that must be spanned by the reductions in the next step.
 
@@ -20,7 +20,7 @@ To give an example, the LCS instances $x=a^{k}b^{k}$ and $y = ba^k$ for $k\geq 1
 
 The full set of parameter relations is given in Table x\todo{add table with alpha values}.
 Here we can see some trivial bounds, like $\alpha_L \leq \alpha m \leq \alpha_n$, which is due to the trivial relations $L \leq m \leq n$ which are true for every \lcs{} instance.
-All of the relations are proven in the original paper (see \cite[section 6]{Bringman.2018}), but in this summary we will only proof the relations $2\alpha_L - \alpha_\Sigma \leq \alpha_M$.
+All of the relations are proven in the original paper \cite[section 6]{Bringman.2018}, but in this summary we will only proof the relations $2\alpha_L - \alpha_\Sigma \leq \alpha_M$.
 Note that therefore it suffices to prove $\frac{L^2}{|\Sigma|} \leq M$.
 
 \begin{theorem}
@@ -35,6 +35,7 @@ Per definition of matching pairs, we have $M = \sum_{\sigma \in \Sigma} \numSymb
 We can lower bound this by replacing $x$ and $y$ with one of their \lcs{} $z$.
 Hence, $M \geq \sum_{\sigma \in \Sigma} \numSymbols{\sigma}{z}^2$.\todo{finish proof}
 \end{proof}
+
 
 
 
