--- a/summary/sections/main_part/reductions/small_lcs.tex
+++ b/summary/sections/main_part/reductions/small_lcs.tex
@@ -1,12 +1,14 @@
-\subsubsection{Small LCS}
-For the first reduction, we assume $\alpha_\delta = \alpha_m$, i.e., the number of deleted symbols in the smaller strings is asymptotically the same as the length of the smaller string.
-This reduction is the same as used in a previous fine-grained analysis of \lcs{} \cite{Bringmann.2015}.
-
+\subsection{Small LCS}
+For the first reduction, we assume $\alpha_\delta = \alpha_m$, i.e., the number of deleted symbols in the smaller strings is asymptotically the same as its length.
+This reduction is similar to one in a previous fine-grained analysis of \lcs{} \cite{Bringmann.2015}.
+We first present a gadget to embed vectors into strings.
+This gadget will also be used in the other reductions.
+Then we show how to build the full \lcs{} instances from \ov{} instances by using several instances of these gadgets.
 
 
 
 \begin{theorem}[Normalized Vector Gadget]
-For any two vectors $a$ and $b$ of dimension $D$, there are two strings $\nvg{a}$ and $\nvg{b}$ with length $\bigO{D}$ such that
+For any two vectors $a$ and $b$ of dimension $D$, there are two strings $\nvg{a}$ and $\nvg{b}$ with length $\Theta(D)$ such that
 \[
 L(\nvg{a}, \nvg{b}) = \begin{cases}
 		\rho_0 & if \langle a, b \rangle = 0\\
@@ -16,18 +18,29 @@ L(\nvg{a}, \nvg{b}) = \begin{cases}
 for an appropriate $\rho_0 > \rho_1$.
 \end{theorem}
 
+\input{sections/main_part/reductions/small_lcs/nvg_figure}
 
+We refer to the previous fine-grained analysis \cite{Bringmann.2015} for the proof.
+See \autoref{fig:nvg} for a visualization of an \nvgName{}.
+Note however, that we can now infer from the \lcs{} of two of the \nvgName{}s whether the respective vectors are orthogonal.
+Because the \lcs{} only admits two specific values, we can also infer from the sum of \lcs{} lengths of multiple vector pairs whether any of these pairs are orthogonal.
+We now use this fact to build the final construction.
+
+
+% =============================== OR Gadget ========================
 \begin{theorem}
+\label{thm:small_lcs_construction}
 	For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$ and $\mathcal{B} = \{b_1, \ldots, b_B\}$ with $A \geq B$ and dimension $D$, we can construct the strings
 \begin{align*}
-	x &=& &\nvg{a_1}\ 0^\gamma\ \nvg{a_2}\ 0^\gamma\ \cdots\ 0^\gamma\ \nvg{a_A}\\
-	y&=& 0^{A\gamma'}\ &\nvg{b_1}\ 0^{\gamma}\ \nvg{b_2}\ 0^\gamma\ \cdots\ 0^\gamma\ \nvg{b_B}\ 0^{A\gamma'}
+	x &=& \nvg{a_1}\ 0^\gamma\ \cdots\ 0^\gamma\ \nvg{a_A}\ &0^\gamma\ %
+	\nvg{a_1}\ 0^\gamma\ \cdots\ 0^\gamma\ \nvg{a_A}\\
+	y&=& 0^{A\gamma'}\ \nvg{b_1}\ 0^{\gamma}\ \nvg{b_2}\ &0^\gamma\ \cdots\ 0^\gamma\ \nvg{b_B}\ 0^{A\gamma'}
 \end{align*}
 
-in time $\bigO{AD}$ with large enough $\gamma, \gamma' \geq |\nvg{a_i} + |\nvg{b_j}|$, satisfying:
+in time $\bigO{AD}$ with large enough $\gamma, \gamma' \geq |\nvg{a_i}| + |\nvg{b_j}|$, satisfying:
 
 \begin{enumerate}[(i)]
-    \item $L(x,y) \geq \rho \Leftrightarrow \exists a_i, b_j:\; \langle a_i,b_j \rangle = 0$ \quad\quad (for some appropriate $\rho$)
+    \item\label{thm:small_lcs_construction:infer} $L(x,y) \geq \rho \Leftrightarrow \exists a_i, b_j:\; \langle a_i,b_j \rangle = 0$ \quad\quad (for some appropriate $\rho$)
 
     \item $|x|, |y| = \bigO{AD}$
 \end{enumerate}
@@ -58,8 +71,41 @@ in time $\bigO{AD}$ with large enough $\gamma, \gamma' \geq |\nvg{a_i} + |\nvg{b
 	\path[draw, guard edge] (a_gA_left.south) edge (b_g4.north);
 	\path[draw, input edge] (aA.south) edge (bB.north);
 \end{tikzpicture}
+\caption{Visualization of }
 \end{figure}
 
 We will not prove this theorem here, but only provide an intuition for its correctness.
-The blocks of $0^\gamma$ guard each normalized vector gadget such that for any \lcs{} no $\nvg{a_i}$ or $\nvg{b_j}$ will match with multiple \nvgName{}s.
-The blocks of zero at the start and end of $y$ allow to skip \nvgName{}s of $x$ to align the $B$ \nvgName{}s of $y$ with any subsequence of $B$ \nvgName{}s of $x$.
+The blocks of $0^\gamma$ guard each normalized vector gadget such that for any \lcs{} every $\nvg{b_j}$ will align with an $\nvg{a_i}$ and will not match with multiple \nvgName{}s.
+The blocks of zeroes at the start and end of $y$ allow to \enquote{skip} \nvgName{}s of $x$ to align the $B$ \nvgName{}s of $y$ with any consecutive subsequence of $B$ \nvgName{}s of $x$.
+Because of the repeated structure of $x$, an \lcs{} can then \enquote{pick} an alignment where a desired $\nvg{a_i}$ and $\nvg{b_j}$ align, i.e., one where $\langle a_i, b_j \rangle = 0$ if existing.
+We can then use $L(\nvg{a_i}, \nvg{b_j}) \in \{\rho_0, \rho_1\}$ to find an appropriate $\rho$ as decision boundary to decide the $\ov$ instance.
+This should motivate the correctness of our construction.
+
+
+\paragraph*{Reduction}
+We now use the previous lemma to instantiate the actual reductions with the desired bounds.
+Let $n \geq 1$ be arbitrary and consider target values $p = n^{\alpha_p}$ for all parameters $p \in \mathcal{P}$.
+We construct strings $x$ and $y$ as in \autoref{thm:small_lcs_construction} with $D = n^{o(1)}$, $A := \lfloor \frac{L}{D} \rfloor$ and $B := \lfloor \frac{m^2}{LD} \rfloor$.\footnote{In the original paper they used $B := \lfloor \frac{d}{LD} \rfloor$. We however simplified this, because we later restrict us to a reduced parameter space for simplicity reasons.}
+Note that \uovh{} implies a lower bound of $(AB)^{1-o(1)} = n^{2\alpha_m - o(1)} = m^{2 - o(1)} = (\delta m)^{1-o(1)}$ where the last equality holds in the current case $\alpha_\delta = \alpha_m$.
+By \autoref{thm:small_lcs_construction} (\ref{thm:small_lcs_construction:infer}) we can infer from $L(x,y)$ whether any vectors are orthogonal.
+Further the running time of the reduction is $\bigO{AD} = \bigO{L} \leq \bigO{\delta m}$ since trivially $L \leq m$.
+This proves a lower bound for any algorithm for $\lcsy{\mathbb{\alpha}}$ of $(\delta m)^{1-o(1)}$.
+
+
+What now remains to be shown is the parameter space that this reduction spans, i.e., for what \lcs{} parameter combinations we can proof a conditional lower bound.
+
+
+
+\paragraph*{Parameter Space}
+For a multivariate analysis we want to have reductions that span the full (non-trivial) parameter space to show conditional lower bounds for any parameter combination.
+Hence, our goal is now to show that given a target parameter setting $\mathbf{\alpha}$, we can create instances that are in $\lcsy{\mathbf{\alpha}}$.
+We write $p = n^{\alpha_p}$ as the target value for any parameter $p \in \mathcal{P}$ and $p(x,y)$ as the actual value for the \lcs{} instance $(x,y)$.
+
+The authors of the original paper have shown monotonicity of the parameter space \cite[section 4.2]{Bringman.2018}, i.e., it suffices to show that $p(x,y) \leq \bigO{p}$ for every possible target value of $p \in \mathcal{P}$.
+Note that the monotonicity is not trivial and even fails for the case $|\Sigma| = 2$, but we do not handle this case here.
+
+%Recall that we remain with the assumption $\alpha_\delta = \alpha_m$, i.e., $\bigO{\delta} = \bigO{m}$.
+
+In this summary and we will use a reduced parameter set of $P' = \{n, m, L, \Sigma, M\}$ for this case.
+For a proof of the full parameter set we refer to the original paper \cite[section 9.1.2]{Bringman.2018}.
+
